--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -16,29 +16,13 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-autoconfigure'
-	annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '3.2.2'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.2'
+	implementation 'org.springframework.boot:spring-boot-starter:3.2.2'
 	implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0-M1'
-
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.5'
-	implementation 'org.postgresql:postgresql:42.7.3'
-	implementation 'org.springframework:spring-jdbc:6.1.6'
-	implementation 'org.springframework.data:spring-data-jpa:3.2.5'
-	implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0-M2'
-//	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.5'
-
-	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
-//	implementation 'org.springframework.security:spring-security-core:6.3.0'
-
+	implementation 'org.springframework.data:spring-data-jpa:3.2.5'
+	implementation 'org.hibernate.orm:hibernate-core:7.0.0.Alpha1' //
 	annotationProcessor "org.projectlombok:lombok:1.18.32"
 	compileOnly 'org.projectlombok:lombok:1.18.32'
-
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
