--- a/deposit/build.gradle
+++ b/deposit/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.0'
     id 'io.spring.dependency-management' version '1.1.5'
+    id 'io.freefair.aspectj.post-compile-weaving' version '8.6'
 }
 
 group = 'ru.mts'
@@ -31,6 +32,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.2.5'
     implementation 'org.hibernate.orm:hibernate-core:7.0.0.Alpha1' //
     implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0-M2'
+
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    implementation 'com.google.guava:guava:33.1.0-jre'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.17.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
+    implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.17.0'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+
     runtimeOnly 'org.postgresql:postgresql:42.7.3'
     annotationProcessor "org.projectlombok:lombok:1.18.32"
     compileOnly 'org.projectlombok:lombok:1.18.32'
