--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -22,16 +22,14 @@ dependencies {
 	implementation 'org.springframework.data:spring-data-jpa:3.2.5'
 	implementation 'org.hibernate.orm:hibernate-core:7.0.0.Alpha1' //
 
-	implementation 'org.springframework.boot:spring-boot-starter-aop'
-
-	implementation 'com.google.guava:guava:33.1.0-jre'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
-	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
-	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
-	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.17.0'
-	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
-	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.17.0'
-	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+//	implementation 'com.google.guava:guava:33.1.0-jre'
+//	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+//	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+//	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
+//	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.17.0'
+////	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
+//	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.17.0'
+//	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
 
 	annotationProcessor "org.projectlombok:lombok:1.18.32"
 	compileOnly 'org.projectlombok:lombok:1.18.32'
