--- a/account/build.gradle
+++ b/account/build.gradle
@@ -31,12 +31,13 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
     implementation 'com.google.guava:guava:33.1.0-jre'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.17.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
     implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.17.0'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
 
