--- a/aggregator/build.gradle
+++ b/aggregator/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.0'
     id 'io.spring.dependency-management' version '1.1.5'
+    id 'org.flywaydb.flyway' version '9.0.0'
     id 'io.freefair.aspectj.post-compile-weaving' version '8.6'
 }
 
@@ -41,6 +42,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
     implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.17.0'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+
+    implementation('org.flywaydb:flyway-core')
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
